<resources>
    <string name="app_name">Спунбилл</string>

    <string name="main_nav_title_home">Главная</string>
    <string name="main_nav_title_catalog">Каталог</string>
    <string name="main_nav_title_favorites">Избранное</string>
    <string name="main_nav_title_profile">Профиль</string>

    <string name="hint_phone_number">Номер телефона</string>
    <string name="hint_verification_code">Код проверки</string>

    <string name="sign_in_send_code_button_text">Отправить код</string>
    <string name="sign_in_label">Введите номер телефона\nдля входа</string>

    <string name="phone_verification_apply_button_text">Подтвердить</string>
    <string name="phone_verification_label">Код отправлен на номер\n</string>
    <string name="image_description">image_description</string>
    <string name="phone_verification_send_code_again">Отправить коде еще раз</string>
    <string name="symbol_minus">-</string>
    <string name="symbol_plus">+</string>

    <string name="toolbar_catalog_hint_address">Введите ваш адрес</string>
    <string name="toolbar_catalog_hint_search">Найти продукты</string>

    <string name="single_product_label_composition">Состав</string>
    <string name="single_product_label_exp_date">Срок годности</string>
    <string name="single_product_label_description">Описание</string>
    <string name="cart_pay_button_text">Оплатить</string>
    <string name="favorites_label">Избранное</string>
    <string name="home_label_popular">Популярные</string>
    <string name="home_label_recommended">Рекоммендуемые</string>
    <string name="home_label_actual">Актуальные</string>
    <string name="profile_button_terms_conditions">Правила и соглашения</string>
    <string name="profile_button_a_and_q">Ответы на вопросы</string>
    <string name="profile_button_contact_us">Связаться с нами</string>
    <string name="profile_button_order_history">История заказов</string>
    <string name="profile_button_preferences">Настройки</string>
</resources>