<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/text_label"
        style="@style/Widget.CustomTextInputLayoutLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_label"
        app:layout_constraintEnd_toEndOf="@id/til_phone_number"
        app:layout_constraintStart_toStartOf="@id/til_phone_number"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_phone_number"
        style="@style/Widget.CustomTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/custom_text_input_layout_margin_top"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_label"
        app:layout_constraintWidth_percent="@dimen/custom_text_input_layout_width_percent"
        app:prefixText="+7">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.CustomTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone_number"
            android:maxLength="10"
            android:paddingVertical="@dimen/custom_text_input_edit_text_padding_vertical" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_send_code"
        style="@style/Widget.CustomSubmitMaterialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/custom_submit_button_margin_top"
        android:text="@string/sign_in_send_code_button_text"
        app:layout_constraintEnd_toEndOf="@id/til_phone_number"
        app:layout_constraintStart_toStartOf="@id/til_phone_number"
        app:layout_constraintTop_toBottomOf="@id/til_phone_number" />

</androidx.constraintlayout.widget.ConstraintLayout>