<?xml version="1.0" encoding="utf-8"?>
<!--<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_primary"
    android:theme="@style/ThemeOverlay.AppCompat.ActionBar">-->

<!--<com.google.android.material.appbar.CollapsingToolbarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.CustomCollapsingToolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">-->

<!--<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/til_address"
    style="@style/Widget.CatalogTextInputLayout.Rounded"
    android:layout_width="match_parent"
    android:layout_height="46dp"
    android:layout_marginHorizontal="@dimen/common_margin_horizontal"
    app:endIconDrawable="@drawable/ic_arrow_down"
    app:layout_collapseMode="parallax"
    app:startIconDrawable="@drawable/ic_location">

    <com.google.android.material.textfield.TextInputEditText
        style="@style/Widget.CatalogTextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/toolbar_catalog_hint_address"
        android:textSize="16sp" />
</com.google.android.material.textfield.TextInputLayout>

<androidx.appcompat.widget.Toolbar
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="56dp"
    app:contentInsetStart="0dp"
    app:layout_collapseMode="pin"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_address"
        style="@style/Widget.CatalogTextInputLayout.Rounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_margin_horizontal"
        android:layout_marginTop="10dp"
        app:endIconDrawable="@drawable/ic_arrow_down"
        app:layout_collapseMode="parallax"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_location">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.CatalogTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/toolbar_catalog_hint_address"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_search"
        style="@style/Widget.CatalogTextInputLayout.Rounded"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin_horizontal"
        android:layout_marginEnd="10dp"
        app:endIconDrawable="@drawable/ic_search"
        app:layout_constraintEnd_toStartOf="@id/button_filter"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/til_address">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.CatalogTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/toolbar_catalog_hint_search"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_filter"
        style="@style/Widget.CustomIconButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/common_margin_horizontal"
        android:contentDescription="@string/image_description"
        app:icon="@drawable/ic_filter"
        app:layout_constraintBottom_toBottomOf="@id/til_search"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/til_search" />

</androidx.constraintlayout.widget.ConstraintLayout>
    <!--    </androidx.appcompat.widget.Toolbar>

</com.google.android.material.appbar.CollapsingToolbarLayout>-->

    <!--
    </com.google.android.material.appbar.AppBarLayout>-->
